Set min0height of hero to avoid jump

--- a/_sass/_resources.scss
+++ b/_sass/_resources.scss
@@ -58,6 +58,7 @@ section.sdk-rsrc-release {
   .release-container {
     max-width: 1280px;
     margin: 0 auto;
+    min-height: 360px;
 
     .release-wrapper {
       display: flex;
